--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Learning algorithms and data structures through the lens of JavaScript",
   "main": "src/app.js",
   "scripts": {
-    "start": "node src/app",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --config build/webpack.dev.js",
+    "build": "webpack --config build/webpack.prod.js",
+    "build:watch": "webpack --watch",
+    "serve": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -16,5 +18,26 @@
   "bugs": {
     "url": "https://github.com/bhavesh-ittadwar/js-algorithms-and-data-structures/issues"
   },
-  "homepage": "https://github.com/bhavesh-ittadwar/js-algorithms-and-data-structures#readme"
+  "homepage": "https://github.com/bhavesh-ittadwar/js-algorithms-and-data-structures#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "@popperjs/core": "^2.10.2",
+    "babel-loader": "^8.2.2",
+    "bootstrap": "^5.1.1",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.3.0",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.3.0",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.3.0",
+    "webpack": "^5.56.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.3.0",
+    "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {}
 }
